--- a/Contador básico/index.html
+++ b/Contador básico/index.html
@@ -16,18 +16,20 @@
 
    <section>
         <div>
-           <p>
-            Início:
-            <input type="number" name="txtano" id="inicio" >
-           </p> 
-           <p>
-            Fim:
-            <input type="number" name="txtano" id="fim" >
-           </p> 
-           <p>
-            Passo:
-            <input type="number" name="txtano" id="passo" >
-           </p>
+           <form action="cadastro.php" method="post" autocomplete="on">
+                <p>
+                 Início:
+                 <input type="number" name="txtano" id="inicio" >
+                </p>
+                <p>
+                 Fim:
+                 <input type="number" name="txtano" id="fim" >
+                </p>
+                <p>
+                 Passo:
+                 <input type="number" name="txtano" id="passo" >
+                </p>
+           </form>
         </div>
             
         <div>
