Adicionando strong no footer

--- a/Contador básico/index.html
+++ b/Contador básico/index.html
@@ -43,7 +43,7 @@
    </section>
 
    <footer>
-        <p>&copy;Tiago_Souza</p>
+        <p>&copy;<strong>Tiago_Souza</strong></p>
    </footer>
 
     <script src="script.js"></script>
